package edu.uees.tutorias.notification;

public interface Notificador {
    void enviar(String destinatario, String mensaje);
}